# nixt

./: .flake8  .pylintrc  .ruff.toml  LICENSE  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  setup.py
admin/: man.py
bot/: booting.py  command.py  configs.py  defines.py  package.py  parsers.py  persist.py  repeats.py  runtime.py  statics.py
example/: log.py  tdo.py
examples/: atr.py  cpy.py  flt.py  fnd.py  irc.py  log.py  lst.py  man.py  mbx.py  mdl.py  mod.py  pth.py  rss.py  rst.py  sil.py  srv.py  tdo.py  thr.py  tmr.py  udp.py  upt.py  web.py  wsd.py
iface/: client.pyi  fleet.pyi  handler.pyi  thread.pyi
mods/: __init__.py  adm.py  admin.py  atr.py  basic.py  bsc.py  cfg.py  cmd.py  command.py  config.py  csl.py  ctl.py  dae.py  dbg.py  eml.py  err.py  fie.py  find.py  fld.py  flt.py  fnd.py  hlp.py  irc.py  krn.py  log.py  lst.py  mail.py  man.py  mbx.py  mdl.py  mod.py  names.py  pth.py  pwd.py  req.py  rss.py  rst.py  ser.py  shl.py  show.py  (+17 more)
modz/: __init__.py  fnd.py  mdl.py  rss.py  tdo.py  udp.py
nixbot/: brokers.py  clients.py  command.py  handler.py  message.py  methods.py  persist.py  runtime.py  storage.py  threads.py  timings.py  utility.py
nixt/: __init__..py  __init__.py  __main__.py  args.py  auto.py  boot.py  booting.py  brokers.py  buffers.py  cache.py  caching.py  classes.py  client.py  clients.py  clocker.py  cmds.py  cmnd.py  command.py  config.py  configs.py  console.py  daemons.py  debug.py  decode.py  default.py  defines.py  disk.py  encode.py  encoder.py  engine.py  engines.py  error.py  errors.py  event.py  face.py  find.py  fleet.py  func.py  handler.py  imports.py  (+52 more)
nixtm/: fnd.py  irc.py  log.py  rss.py  tdo.py  tmr.py
nixtmods/: __init__.py  fnd.py  tdo.py
nixts/: __init__.py  dbg.py  disk.py  err.py  find.py  flt.py  fnd.py  irc.py  log.py  rss.py  tbl.py  tdo.py  thr.py  tmr.py  upt.py
other/: email.py  eml.py  irc.py  log.py  man.py  manual.py  mdl.py  model.py  path.py  pth.py  req.py  request.py  rss.py  slg.py  slogan.py  tdo.py  timer.py  tmr.py  (+5 more)
(+190 files in other folders)
