# This file is placed in the Public Domain.


[build-system]
requires = ["setuptools>=61.2", "wheel"]
build-backend = "setuptools.build_meta"


[project]
dynamic = ["version"]
name = "nixt"
authors = [
    {name = "Nixt Niet", email = "nixtniet@gmail.com" },
]
description = "NIXT"
readme = "README.rst"
license = "Unlicense"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities"
]


[project.scripts]
"nixt" = "nixt.runtime:main"


[project.urls]
"home" = "https://pypi.org/project/nixt"
"bugs" = "https://github.com/nixtniet/nixt/issues"
"source" = "https://github.com/nixtniet/nixt"


[tool.setuptools]
packages = [
    'nixt',
    'nixt.modules',
    'nixt.network'
]
include-package-data = false


[tool.setuptools.dynamic]
version = {attr = "nixt.defines.__version__"}
