# This file is placed in the Public Domain.


[build-system]
requires = ["setuptools>=61.2", "wheel"]
build-backend = "setuptools.build_meta"


[project]
version = "500"
name = "nixt"
authors = [
    {name = "Nixt Niet", email = "nixtniet@gmail.com" },
]
description = "write your own commands"
readme = "README.rst"
license = "Unlicense"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities"
]


[project.scripts]
"nixtctl" = "nixt.runtime:control"
"nixtd" = "nixt.runtime:background"
"nixt" = "nixt.runtime:console"
"nixts" = "nixt.runtime:service"


[project.urls]
"home" = "https://pypi.org/project/nixt"
"bugs" = "https://github.com/nixtniet/nixt/issues"
"source" = "https://github.com/nixtniet/nixt"


[tool.setuptools]
packages = [
    'nixt',
    'nixt.mirrors',
    'nixt.modules',
    'nixt.numbers'
]


[tool.pylint."messages control"]
disable = ["C,R,W,E0401,E0402"]


[tool.ruff.lint]
ignore = ["E501", "E701", "E702"]
